Fixed: Sidebar overflows when pinned tabs have titles

--- a/src/styles/themes/proton/sidebar/sidebar.styl
+++ b/src/styles/themes/proton/sidebar/sidebar.styl
@@ -101,7 +101,7 @@ body
   position: relative
   display: flex
   flex-direction: column
-  width: 100%
+  width: 0
   height: 100%
   flex-grow: 1
   flex-shrink: 1
